2007-02-06  Albert Chu  <chu11@llnl.gov>

	* src/modules/clusterlist/cerebro_clusterlist_genders_util.h,
	src/modules/clusterlist/cerebro_clusterlist_genders_util.c
	(cerebro_clusterlist_genders_setup): Add filename parameter.

	* src/modules/clusterlist/cerebro_clusterlist_genders.c: Adjust
	for new function call appropriately.
	
2006-12-21  Albert Chu  <chu11@llnl.gov>

	* src/libs/wrappers/wrappers.c (wrap_select): Fix bug then could
	cause select() spinning.

	* tagged cerebro-1-1-4
	
2006-12-20  Albert Chu  <chu11@llnl.gov>

	* Fix various compiler warnings.
	
2006-12-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_event_server.c
	(_send_event_names_end_response): Fix compiler warnings.
	
	* tagged cerebro-1-1-3

2006-12-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (cerebrod_speaker): Fix bug that
	could cause the loop to spin for small periods of time.

	* tagged cerebro-1-1-2
	 
2006-12-19  Albert Chu  <chu11@llnl.gov>

	* NEWS updated.

	* config/ac_updown_event.m4: Fix typo.

	* config/ac_updown.m4: Renamed from ac_updown_event.m4 and
	modified appropriately for name change.

	* configure.ac, src/modules/event/Makefile.am: Updated
	appropriately.

	* cerebro.spec.in: Support updown event module.

	* tagged cerebro-1-1-1

2006-12-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener.c (_listener_setup_socket),
	src/cerebrod/cerebrod_speaker.c (_speaker_socket_create): Fix
	SO_REUSEADDR corner case.
	
2006-11-16  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/vector.c (vector_set): Fix counting bug.
	
2006-11-14  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Up library version.

	* Globally cleanup code so cerebrod "heartbeat" is now a cerebrod
	"message".  Heartbeats still exist, although they are now one type
	of cerebrod message, rather than the only possible message.
	
2006-11-14  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/cerebro/cerebro_metric_module.h,