@@ -165,11 +165,47 @@ fi
 %{_sbindir}/cerebro-stat
 %{_sbindir}/cerebro-admin
 
+#
+# achu: This looks terrible w/ all these %posts.  There
+# is probably a better way to do this in spec files that
+# I'm currently unaware of.
+#
+
+%post clusterlist-genders
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
+
 %if %{?_with_genders:1}%{!?_with_genders:0}
 %files clusterlist-genders
 %defattr(700,root,root)
 %{_libdir}/cerebro/cerebro_clusterlist_genders.*
 %endif
+
+%post clusterlist-hostsfile
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
 
 %if %{?_with_hostsfile:1}%{!?_with_hostsfile:0}
 %files clusterlist-hostsfile
@@ -177,11 +213,41 @@ fi
 %{_libdir}/cerebro/cerebro_clusterlist_hostsfile.*
 %endif
 
+%post metric-boottime
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
+
 %if %{?_with_boottime:1}%{!?_with_boottime:0}
 %files metric-boottime
 %defattr(700,root,root)
 %{_libdir}/cerebro/cerebro_metric_boottime.*
 %endif
+
+%post metric-loadavg
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
 
 %if %{?_with_loadavg:1}%{!?_with_loadavg:0}
 %files metric-loadavg
@@ -190,6 +256,21 @@ fi
 %{_libdir}/cerebro/cerebro_metric_loadavg5.*
 %{_libdir}/cerebro/cerebro_metric_loadavg15.*
 %endif
+
+%post metric-memory
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
 
 %if %{?_with_memory:1}%{!?_with_memory:0}
 %files metric-memory
@@ -202,6 +283,21 @@ fi
 %{_libdir}/cerebro/cerebro_metric_swapfree.*
 %endif
 
+%post metric-network
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
+
 %if %{?_with_network:1}%{!?_with_network:0}
 %files metric-network
 %defattr(700,root,root)
@@ -213,17 +309,62 @@ fi
 %{_libdir}/cerebro/cerebro_metric_txerrs.*
 %endif
 
+%post metric-slurm-state
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
+
 %if %{?_with_slurm_state:1}%{!?_with_slurm_state:0}
 %files metric-slurm-state
 %defattr(700,root,root)
 %{_libdir}/cerebro/cerebro_metric_slurm_state.*
 %endif
 
+%post metric-shutdown
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
+
 %if %{?_with_shutdown:1}%{!?_with_shutdown:0}
 %files metric-shutdown
 %defattr(700,root,root)
 %{_libdir}/cerebro/cerebro_metric_shutdown.*
 %endif
+
+%post event-updown
+#
+# Restart cerebrod if already running
+#
+if [ "$1" = 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      [ -x /sbin/chkconfig ] && /sbin/chkconfig --add cerebrod
+   fi
+fi
+if [ $1 -ge 1 ]; then
+   if [ -x /etc/init.d/cerebrod ]; then
+      /etc/init.d/cerebrod condrestart
+   fi
+fi
 
 %if %{?_with_updown:1}%{!?_with_updown:0}
 %files event-updown
