@@ -1,3 +1,7 @@
+2007-02-08  Albert Chu  <chu11@llnl.gov>
+
+	* cerebro.spec.in: Add cerebrod restart fix.
+	
 2007-02-06  Albert Chu  <chu11@llnl.gov>
 
 	* src/modules/clusterlist/cerebro_clusterlist_genders_util.h,
